# legal_case_search

./: .gitignore  README.md  common.py  main.py  pyproject.toml  test_agent.ipynb  test_chain.ipynb
chatbot/: chain.py  chat.py
preprocessing/: data.py
prompts/: prompt.yaml  prompt_agent.yaml
